src/sidebar.css
body {
  font: message-box;
}

#tabs-list {
  list-style-type: none;
  padding-inline-start: 0px;
  mask-image: linear-gradient(to left, transparent, black 1em);
}

#tabs-list > li > label > input[type="checkbox"] {
  padding-inline-start: 0px;
  padding-inline-end: 0px;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
}

#tabs-list > li {
  white-space: nowrap;
  overflow: hidden;
  padding: 1px 0;
}

#tabs-list > li > label {
  display: flex;
  flex-direction: row;
  align-items: center;

  -moz-user-select: none;
}

#controls {
  padding: 5px 0;
  margin: 5px 0;
  margin-inline-start: 5px;
  border-bottom: 1px solid ThreeDDarkShadow;
}

.block {
  display: block;
}

.favicon {
  display: inline;
  width: 16px;
  height: 16px;
  min-width: 16px;
  min-height: 16px;
  margin-inline-end: 5px;
  margin-inline-start: 5px;
}

li.active > label {
  font-weight: bold;
}

.hidden,
.filtered {
  display: none;
}

#controls {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

#filter {
  width: 100%;
  margin: 5px 0;
}

#content {
  padding: 0 5px;
}

#select-all,
#select-click {
  margin-inline-start: 0px;
  padding-inline-start: 0px;
}

#moreActions {
  width: 100%;
  margin-top: 5px;
}


.pinned {
  font-style: italic;
}

li.pinned + li:not(.pinned) {
  margin-top: 10px;
}

#pinInfo {
  text-transform: uppercase;
  color: grey;
  font-size: 80%;
}

